# csp-gaussian-splatting

./: .gitmodules  CMakeLists.txt  README.md
gui/: csp-gaussian-splatting.html
gui/js/: csp-gaussian-splatting.js
shaders/: copy.frag  copy.vert  gaussian_surface.frag  gaussian_surface.vert
src/: GaussianRenderer.cpp  GaussianRenderer.hpp  Plugin.cpp  Plugin.hpp  logger.cpp  logger.hpp
src/renderer/: GaussianData.cpp  GaussianData.hpp  SplatRenderer.cpp  SplatRenderer.hpp  SurfaceRenderer.cpp  SurfaceRenderer.hpp
